force-app/main/default/objects/EmailToCase__mdt/EmailToCase__mdt.object-meta.xml
<CustomObject>
    <label>Email To Case</label>
    <pluralLabel>Email To Case</pluralLabel>
</CustomObject>