force-app/main/default/objects/EmailToCase__mdt/fields/CloseCase__c.field-meta.xml
<CustomField>
    <fullName>CloseCase__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Closes the case with Close-Unresolved status</inlineHelpText>
    <label>Close Case</label>
    <type>Checkbox</type>
</CustomField>