force-app/main/default/objects/EmailToCase__mdt/fields/Email_Template_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_to_Send__c</fullName>
    <label>Email Template to Send</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>