force-app/main/default/objects/EmailToCase__mdt/fields/FieldToUpdateAPI__c.field-meta.xml
<CustomField>
    <fullName>FieldToUpdateAPI__c</fullName>
    <label>Field To Update (API)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>