force-app/main/default/objects/EmailToCase__mdt/fields/FieldToUpdateType__c.field-meta.xml
<CustomField>
    <fullName>FieldToUpdateType__c</fullName>
    <defaultValue>&quot;Text&quot;</defaultValue>
    <label>Field To Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>