force-app/main/default/objects/EmailToCase__mdt/fields/FieldToUpdateValue__c.field-meta.xml
<CustomField>
    <fullName>FieldToUpdateValue__c</fullName>
    <label>Field To Update Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>