force-app/main/default/objects/EmailToCase__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>AffiliateMetadata__mdt</referenceTo>
    <relationshipLabel>Email To Case</relationshipLabel>
    <relationshipName>Email_To_Case</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>