force-app/main/default/objects/EmailToCase__mdt/fields/PrimaryComparison__c.field-meta.xml
<CustomField>
    <fullName>PrimaryComparison__c</fullName>
    <label>Primary Comparison</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
                <default>true</default>
                <label>Equal</label>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Than or Equal</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less Than or Equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>