force-app/main/default/objects/EmailToCase__mdt/fields/PrimaryFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFieldAPI__c</fullName>
    <label>Primary Field (API)</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
</CustomField>