force-app/main/default/objects/EmailToCase__mdt/fields/PrimaryValue__c.field-meta.xml
<CustomField>
    <fullName>PrimaryValue__c</fullName>
    <label>Primary Value</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>