force-app/main/default/objects/EmailToCase__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
                <default>true</default>
                <label>Inquiry</label>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>