force-app/main/default/objects/EmailToCase__mdt/fields/SecondaryFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>SecondaryFieldAPI__c</fullName>
    <label>Secondary Field (API)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>