force-app/main/default/objects/EmailToCase__mdt/fields/SecondaryValue__c.field-meta.xml
<CustomField>
    <fullName>SecondaryValue__c</fullName>
    <label>Secondary Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>